Fix linting issues

--- a/src/docs/d8.md
+++ b/src/docs/d8.md
@@ -62,7 +62,7 @@ d8> greet('World!');
 It’s possible to make command-line arguments available to your JavaScript code at runtime with `d8`. Just pass them after `--` on the command line. You can then access them at the top-level of your script using the `arguments` object.
 
 ```bash
-$ out.gn/x64.optdebug/d8 -- hi
+out.gn/x64.optdebug/d8 -- hi
 ```
 
 You can now access an array of the arguments using the `arguments` object:
