--- a/src/docs/i18n.md
+++ b/src/docs/i18n.md
@@ -1,19 +1,17 @@
 ---
 title: 'i18n support'
 ---
-## ECMAScript 402
-
 V8 optionally implements [the ECMAScript 402 specification](https://tc39.github.io/ecma402/). The API is enabled by default, but can be turned off at compile time.
 
-### Prerequisites
+## Prerequisites
 
 The i18n implementation adds a dependency on ICU. Run the following command to check out a suitable version of ICU into `third_party/icu`:
 
-### Alternative ICU checkout
+## Alternative ICU checkout
 
 You can check out the ICU sources at a different location and define the gyp variable `icu_gyp_path` to point at the `icu.gyp` file.
 
-### System ICU
+## System ICU
 
 Last but not least, you can compile V8 against a version of ICU installed in your system. To do so, specify the gyp variable `use_system_icu=1`. If you also have `want_separate_host_toolset` enabled, the bundled ICU will still be compiled to generate the V8 snapshot. The system ICU will only be used for the target architecture.
 
