Document ICU version required for V8
See https://bugs.chromium.org/p/v8/issues/detail?id=8424 for background.

--- a/src/docs/i18n.md
+++ b/src/docs/i18n.md
@@ -5,7 +5,9 @@ V8 optionally implements [the ECMAScript 402 specification](https://tc39.github.
 
 ## Prerequisites
 
-The i18n implementation adds a dependency on ICU. Run the following command to check out a suitable version of ICU into `third_party/icu`:
+The i18n implementation adds a dependency on ICU. As of 7.2, V8 requires at least ICU version 63.
+
+Run the following command to check out a suitable version of ICU into `third_party/icu`:
 
 ## Alternative ICU checkout
 
