--- a/src/docs/i18n.md
+++ b/src/docs/i18n.md
@@ -5,9 +5,13 @@ V8 optionally implements [the ECMAScript 402 specification](https://tc39.github.
 
 ## Prerequisites
 
-The i18n implementation adds a dependency on ICU. As of 7.2, V8 requires at least ICU version 63.
+The i18n implementation adds a dependency on ICU. As of v7.2, V8 requires at least ICU version 63. The exact dependency is specified in [V8’s `DEPS` file](https://chromium.googlesource.com/v8/v8.git/+/master/DEPS).
 
 Run the following command to check out a suitable version of ICU into `third_party/icu`:
+
+```bash
+gclient sync
+```
 
 ## Alternative ICU checkout
 
@@ -15,7 +19,7 @@ You can check out the ICU sources at a different location and define the gyp var
 
 ## System ICU
 
-Last but not least, you can compile V8 against a version of ICU installed in your system. To do so, specify the gyp variable `use_system_icu=1`. If you also have `want_separate_host_toolset` enabled, the bundled ICU will still be compiled to generate the V8 snapshot. The system ICU will only be used for the target architecture.
+Last but not least, you can compile V8 against a version of ICU installed in your system. To do so, specify the GYP variable `use_system_icu=1`. If you also have `want_separate_host_toolset` enabled, the bundled ICU is still compiled to generate the V8 snapshot. The system ICU is only used for the target architecture.
 
 ## Embedding V8
 
@@ -29,8 +33,4 @@ It is safe to invoke this method if ICU was not compiled in, then it does nothin
 
 ## Compiling without i18n support
 
-To build V8 without i18n support, run the following command:
-
-```bash
-make i18nsupport=off native
-```
+To build V8 without i18n support, use [`gn args`](/docs/build-gn#gn) to set `v8_enable_i18n_support = false` before compiling.
