--- a/src/docs/i18n.md
+++ b/src/docs/i18n.md
@@ -13,6 +13,8 @@ Run the following command to check out a suitable version of ICU into `third_par
 gclient sync
 ```
 
+See [“staying up to date”](/docs/source-code#staying-up-to-date) for more details.
+
 ## Alternative ICU checkout
 
 You can check out the ICU sources at a different location and define the gyp variable `icu_gyp_path` to point at the `icu.gyp` file.
