--- a/src/404.md
+++ b/src/404.md
@@ -4,6 +4,6 @@ permalink: /404.html
 excludeFromSitemap: true
 layout: layouts/base.njk
 ---
-# 404: document not found
+## 404: document not found
 
 Sorry, we couldn’t find that page.
