--- a/src/docs/d8.md
+++ b/src/docs/d8.md
@@ -77,4 +77,4 @@ d8> arguments[0]
 
 [Kevin Ennis’s D8 Guide](https://gist.github.com/kevincennis/0cd2138c78a07412ef21) has really good information about exploring V8 using `d8`.
 
-Background of the name "d8": Very early on, V8 had a "[sample shell](https://chromium.googlesource.com/v8/v8/+/master/samples/shell.cc)", whose purpose was to demonstrate how V8 could be embedded to build a JavaScript shell. It was intentionally minimalist, and was simply called "shell". Soon after, a "developer shell" was added with more convenience features to aid developers in their daily work, and it needed a name too. The original reason why "d8" was chosen as a name is lost to history; it caught on because "eveloper" is 8 omitted characters, so "d8 shell" makes sense as an abbreviation, and also fits in nicely with "V8" as the project name.
+Background of the name `d8`: very early on, V8 had a “[sample shell](https://chromium.googlesource.com/v8/v8/+/master/samples/shell.cc)”, whose purpose was to demonstrate how V8 could be embedded to build a JavaScript shell. It was intentionally minimalist, and was simply called “shell”. Soon after, a “developer shell” was added with more convenience features to aid developers in their daily work, and it needed a name too. The original reason why “d8” was chosen as a name is lost to history; it caught on because “eveloper” is 8 omitted characters, so “d8 shell” makes sense as an abbreviation, and also fits in nicely with “V8” as the project name.
